--- a/html-css/module-3/css/styles.css
+++ b/html-css/module-3/css/styles.css
@@ -6,6 +6,15 @@ html{
 }
 
 
+h1{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+h3{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
 body{
     font-family: 'Playfair Display', serif;
     font-size: 14px;
@@ -57,6 +66,7 @@ img{
     display: block;
     max-width: 100%;
     height: auto;
+    margin-bottom: 20px;
 }
 section{
     margin: 0px;
@@ -86,5 +96,8 @@ input[type="radio"].visually-hidden{
     clip: rect(0 0 0 0);
     overflow:hidden;
 }
+
+
+
 
 
