--- a/html-css/module-3/css/styles.css
+++ b/html-css/module-3/css/styles.css
@@ -5,7 +5,6 @@ html{
     box-sizing: inherit;
 }
 
-
 h1{
     margin-top: 0px;
     margin-bottom: 0px;
@@ -55,25 +54,26 @@ body{
     margin-bottom: 0px;
 }
 
-
 .main-menu li {
     display: inline-block;
 }
 .main-menu li:first-child{
-    margin-left: 162px;
-    margin-right: 120px;
+    color: #03a9f4;
+    margin-left: 165px;
+    margin-right: 110px;
 }
 .main-menu li:last-child{
-    margin-right: 162px;
-    margin-left: 95px;
+    margin-right: 165px;
+    margin-left: 90px;
+}
+.main-menu li:nth-child(2){
+    margin-right: 100px;
 }
 
 .main-menu a:hover,
 .main-menu a:focus {
    color: #03a9f4; 
 }
-
-
 
 img{
     display: block;
@@ -86,8 +86,6 @@ section{
     margin: 0px;
     padding: 0px;
 }
-
-
 
 .text{
     margin-top: 34px;
@@ -124,7 +122,6 @@ section{
     margin-bottom: 56px;
     margin-top: 56px;
 }
-
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
