--- a/html-css/module-3/css/styles.css
+++ b/html-css/module-3/css/styles.css
@@ -4,17 +4,18 @@ html{
 *, *::before, *::after{
     box-sizing: inherit;
 }
-
 h1{
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 h3{
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
-
-
+p{
+    margin-top: 0;
+    margin-bottom: 0;
+}
 body{
     font-family: 'Playfair Display', serif;
     font-size: 14px;
@@ -32,73 +33,76 @@ body{
     line-height: 24px;
     text-transform: uppercase;
     color: #b4ad9e;
-    
+    margin: 0;
+    margin-bottom: 16px;   
 }
 .tittle{
     font-size: 30px;
     font-weight: 400;
     line-height: 36px ;
+    margin-bottom: 30px ;
 }
 .main-menu a {
     display: inline-block;
     text-decoration: none;
     text-transform: uppercase;
-    list-style: none;
-    
-    
+    list-style: none; 
+      color: #626262;
+}
+.header{
+    margin: 0;
+    padding: 0;
+    padding-top: 74px;
+    padding-bottom: 100px;
 }
 .main-menu{
-   
-    margin-top: 75px;
-    padding: 0px;
-    margin-bottom: 0px;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+    width: 900px;
+    text-align: center;
+  
+    
 }
-
+.main-menu li:not(:last-child) {
+    margin-right: 96px;
+}
 .main-menu li {
-    display: inline-block;
+    display: inline-block;      
 }
-.main-menu li:first-child{
-    color: #03a9f4;
-    margin-left: 165px;
-    margin-right: 110px;
-}
-.main-menu li:last-child{
-    margin-right: 165px;
-    margin-left: 90px;
-}
-.main-menu li:nth-child(2){
-    margin-right: 100px;
-}
-.main-menu-item-left a:first-child{
-    color: #03a9f4;
+.main-menu-item{
+    font-size: 14px;
+    line-height: 24px;
 }
 .main-menu a:hover,
 .main-menu a:focus {
    color: #03a9f4; 
 }
-
 img{
     display: block;
     max-width: 100%;
     height: auto;
-    margin-bottom: 25px;
-    margin-top: 120px;
-}
-section{
-    margin: 0px;
-    padding: 0px;
-}
-
-.text{
-     font-size: 14px;  
-    margin-top: 34px;
-    margin-bottom: 0px;
+    margin: 0;
+    padding-bottom: 26px;
     
 }
+section{
+    margin: 0;
+    padding: 0;
+}
+.text{
+     font-size: 14px;
+     line-height: 24px;
+    padding-bottom: 0;
+    margin: 0;
+    margin-bottom: 130px;  
+}
+
 .content-list{
     list-style: none;
     font-size: 0;
-    padding: 0px;
+    padding: 0;
+    margin: 0;
 }
 .content-item{
     display: inline-block;
@@ -107,11 +111,8 @@ section{
 .content-item:not(:nth-child(2n)){
     margin-right: 60px;
 }
-
 .load-more{
-    margin-top: 52px;
-    margin-left: 360px;
-    margin-bottom: 70px;
+    margin: 0;
     padding: 18px 36px;
     font-size: 20px;
     line-height: 24px;
@@ -119,10 +120,10 @@ section{
     border: 1px solid #626262;
     cursor: pointer;
     display: block;  
+    
 }
-.botton{
-    margin-bottom: 56px;
-    margin-top: 56px;
+.section{
+    padding-bottom: 70px;
 }
 
 .visually-hidden:not(:focus):not(:active),
