--- a/html-css/module-3/css/styles.css
+++ b/html-css/module-3/css/styles.css
@@ -95,31 +95,39 @@ section{
      line-height: 24px;
     padding-bottom: 0;
     margin: 0;
-    margin-bottom: 130px;  
+    
 }
-
+.text:not(:nth-last-child(-n+2)){
+    margin-bottom: 0;
+}
 .content-list{
     list-style: none;
     font-size: 0;
     padding: 0;
     margin: 0;
+    margin-bottom: 48px;
 }
 .content-item{
     display: inline-block;
     width: 420px;
+    margin-bottom: 130px;
+}
+.content-item:nth-last-child(-n + 3){
+    margin-bottom: 0;
 }
 .content-item:not(:nth-child(2n)){
     margin-right: 60px;
 }
 .load-more{
-    margin: 0;
+    margin: 0 auto;
     padding: 18px 36px;
     font-size: 20px;
     line-height: 24px;
     background-color: transparent;
     border: 1px solid #626262;
     cursor: pointer;
-    display: block;  
+    display: block;
+    
     
 }
 .section{
