--- a/html-css/module-4/css/style.css
+++ b/html-css/module-4/css/style.css
@@ -1,3 +1,17 @@
+html{
+    box-sizing:border-box;
+}
+*,
+*::before,
+*::after{
+    box-sizing: inherit;
+}
+Для изображений в стили копируйте:
+img {
+   display: block;
+   max-width: 100%;
+   height: auto;
+}
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden{
@@ -18,9 +32,24 @@ body{
     font-size: 14px;
     line-height: 26px;
 }
+.clearfix::after{
+    display: table;
+    content: "";
+    clear: both;
+}
+.container{
+    width: 1110px;
+    margin: 0 auto;
+}
+header{
+    padding-top: 54px;
+    padding-bottom: 100px;
+}
 .logo{
-    font-size: 0px;
+    margin: 0;
+    padding: 0;
     list-style: none;
+    float: left;
 }
 .logo a{
     font-size: 30px;
@@ -34,14 +63,28 @@ body{
 .logo a:hover{
     color: #1abc9c;
 }
+
 .logo::first-letter{
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     color: #1abc9c;
 }
+
 .site-navigation{
-    font-size: 0px;
     list-style: none;
+    margin: 0;
+    margin-top: 4px;
+    padding: 0;
+    float: right;
+    width: 486px;
+
+
+    }
+    .site-navigation li{
+        float: left;
+    }
+    .site-navigation li:not(:last-child){
+        margin-right: 36px;
     }
 .site-navigation a{
     color: #0f0101;
@@ -55,8 +98,9 @@ body{
 .site-navigation a:hover{
     color: #1abc9c;
 }
-h2{
-    font-size: 0;
+.product-title{
+    text-align: center;
+    margin-bottom: 100px;
 }
 .product-title{
     font-weight: 700;
@@ -68,14 +112,31 @@ h2{
 }
 .product-list{
     list-style: none;
-    font-size: 0;
+    margin: 0;
+    padding: 0;
+}
+.product-list-item{
+    width: 254px;
+    margin-right: 30px;
+    margin-bottom: 50px;
+}
+.product-list-item:nth-child(4n){
+    margin-right: 0;
+}
+.product-list-item{
+    float: left;
 }
 .product-list-item p{
     font-weight: 700;
     font-size: 18px;
     line-height: 32px;
     letter-spacing: -0.360px;
+    float: left;
 }
+
+
+
+
 .news-title{
     font-weight: 700;
     font-size: 48px;
@@ -83,11 +144,22 @@ h2{
     text-transform: uppercase;
     color: #515151;
     letter-spacing: -0.96px;
+    text-align: center;
 }
 .news-list{
     list-style: none;
-    font-size: 0;
-    
+    margin: 0;
+    padding: 0;   
+}
+.news-list-item{
+    width: 346px;
+    margin-right: 30px;    
+}
+.news-list-item:nth-child(3n){
+    margin: 0;
+}
+.news-list-item{
+    float: left;
 }
 .article-title{
 font-size: 18px;
