--- a/html-css/module-4/css/style.css
+++ b/html-css/module-4/css/style.css
@@ -41,9 +41,12 @@ body{
     width: 1110px;
     margin: 0 auto;
 }
+.products{
+    padding-bottom: 36px;
+}
 header{
-    padding-top: 54px;
-    padding-bottom: 100px;
+    padding-top: 34px;
+    padding-bottom: 58px;
 }
 .logo{
     margin: 0;
@@ -63,13 +66,11 @@ header{
 .logo a:hover{
     color: #1abc9c;
 }
-
 .logo::first-letter{
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     color: #1abc9c;
 }
-
 .site-navigation{
     list-style: none;
     margin: 0;
@@ -77,8 +78,6 @@ header{
     padding: 0;
     float: right;
     width: 486px;
-
-
     }
     .site-navigation li{
         float: left;
@@ -100,10 +99,12 @@ header{
 }
 .product-title{
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: 32px;
 }
+
 .product-title{
-    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
     font-size: 48px;
     line-height: 32px;
     text-transform: uppercase;
@@ -115,10 +116,19 @@ header{
     margin: 0;
     padding: 0;
 }
+.product-list::before{
+    display: block;
+    content: '';
+    height: 8px;
+    width: 160px;
+    background-color: #1abc9c;
+    margin: 0 auto;
+    margin-bottom: 92px;
+}
 .product-list-item{
     width: 254px;
     margin-right: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 .product-list-item:nth-child(4n){
     margin-right: 0;
@@ -127,16 +137,39 @@ header{
     float: left;
 }
 .product-list-item p{
-    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
     font-size: 18px;
-    line-height: 32px;
+    line-height: 38px;
     letter-spacing: -0.360px;
-    float: left;
+    float: left;  
 }
 
-
-
-
+p.text{
+    display: block;
+    width: 200px;
+    height: 40px;
+    background-color: #323232;
+    color: #ffffff;
+    margin: 0;
+    text-align: left;
+    text-indent: 12px;
+    text-transform: uppercase;
+}
+p.price{
+    display: block;
+    width: 54px;
+    height: 40px;
+    background-color: #8c8c8c;
+    color: #ffffff;
+    margin: 0;
+    text-align: center;
+    text-transform: uppercase;
+    
+}
+.news{
+padding-bottom: 46px;
+}
 .news-title{
     font-weight: 700;
     font-size: 48px;
@@ -145,6 +178,16 @@ header{
     color: #515151;
     letter-spacing: -0.96px;
     text-align: center;
+    margin-bottom: 32px;
+}
+.news-list::before{
+    display: block;
+    content: '';
+    height: 8px;
+    width: 160px;
+    background-color: #1abc9c;
+    margin: 0 auto;
+    margin-bottom: 82px;
 }
 .news-list{
     list-style: none;
@@ -166,6 +209,7 @@ font-size: 18px;
 line-height: 26px;
 font-weight: 600;
 letter-spacing: -0.36px;
+
 }
 .article-text{
     font-size: 14px;
@@ -173,9 +217,23 @@ letter-spacing: -0.36px;
     letter-spacing: -0.28px;
     font-weight: 400;
 }
+.article-title::after{
+    display: block;
+    content: '';
+    height: 4px;
+    width: 132px;
+    background-color: #1abc9c;
+    margin: 0
+}
 .read-more{
+    border: none;
+    border-radius: 4px;
+    padding: 14px 36px;
     font-size: 16px;
     line-height: 26px;
     font-weight: 300;
-    letter-spacing: -0.32px;
+    color: #ffffff;
+    background-color: #4ec6ab;
+    cursor: pointer;
+    display: block;    
 }
