--- a/html-css/module-4/css/style.css
+++ b/html-css/module-4/css/style.css
@@ -6,7 +6,7 @@ html{
 *::after{
     box-sizing: inherit;
 }
-Для изображений в стили копируйте:
+
 img {
    display: block;
    max-width: 100%;
@@ -23,7 +23,7 @@ input[type="radio"].visually-hidden{
     padding: 0;
     white-space:nowrap;
     clip-path:inset(100%);
-    clip: rect(0 0 0 0);
+    clip: rect(0, 0, 0, 0);
     overflow:hidden;
 }
 body{
@@ -245,9 +245,9 @@ letter-spacing: -0.36px;
     border: none;
     border-radius: 4px;
     text-align: center;
-    padding-top: 12px;
+    
     font-size: 16px;
-    line-height: 26px;
+    line-height: 48px;
     font-weight: 300;
     color: #ffffff;
     background-color: #4ec6ab;
