--- a/html-css/module-5/css/style.css
+++ b/html-css/module-5/css/style.css
@@ -111,19 +111,27 @@ header{
     font-size: 0;
     margin: 0;
     padding: 0;
-    background-color: black;;
+    background-color: black;
+    position: relative;
+}
+.titles{
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .slider-title{
     font-size: 52px;
     font-weight: 700;
     text-transform: uppercase;
-    text-align: center;
+    color: #ffffff;
 }
 .slider-subtitle{
     font-size: 28px;
     font-weight: 300;
     text-transform: uppercase;
-    text-align: center;
+    color: #ffffff;
 }
 .site-background{
     background-repeat: no-repeat;
@@ -162,6 +170,7 @@ header{
     margin: 0 auto;
     margin-top: 32px;
 }
+
 .product-list{
     font-size: 0;
     list-style: none;
@@ -169,11 +178,16 @@ header{
     padding: 0;
 }
 .product-list-item{
+    position: relative;
     float: left;
 }
 .product-list-item{
     width: 254px;
     margin-right: 30px;
+}
+.card-bottom{
+    position: absolute;
+    bottom: 0px;
 }
 .product-list-item:nth-child(4n){
     margin-right: 0;
