--- a/html-css/module-5/css/style.css
+++ b/html-css/module-5/css/style.css
@@ -112,6 +112,7 @@ header{
 .site-navigation a:hover{
     color: #1abc9c;
 }
+/* SLIDER */
 .slider{
     font-size: 0;
     margin: 0;
@@ -119,9 +120,16 @@ header{
     background-color: black;
     position: relative;
 }
+.site-background{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    opacity: 0.5;
+}
+
 .slider-btns {
     display: block;
-    width: 1110px;
     right: 50%;
     left: 50%;
     bottom: 50%;
@@ -129,7 +137,6 @@ header{
     position: absolute;
     
 }
-
 .prev{
     float: left;
     background-image: url(../img/icons/arrow-prev.png);
@@ -145,39 +152,36 @@ header{
     background-color: #54a18f;
     background-repeat: no-repeat;
     background-position: center;
-    cursor: pointer;
-    
+    cursor: pointer;   
+}
+.slider-btn:hover{
+    background-color: #7fd9c7;
 }
 
-.titles{
-    width: 730px;
+.slider-carousel {
     position: absolute;
-    display: block;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
-}
+    left: 17%;
+    transform: translateY(-50%);
+  }
 .slider-title{
-    font-size: 54px;
-    font-weight: 700;
+    font-size: 60px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    color: rgb(255, 255, 255);
     text-transform: uppercase;
-    color: #ffffff;
+    letter-spacing: -1.2px;
+    margin-bottom: 36px;
 }
 .slider-subtitle{
-    font-size: 28px;
-    font-weight: 300;
-    text-transform: uppercase;
-    color: #ffffff;
+    font-size: 24px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  letter-spacing: -1.2px;
 }
-.site-background{
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    opacity: 0.5;
-    
-}
+
 .products{
     background-color: #e9f0fd;
     padding-bottom: 100px;
@@ -208,7 +212,6 @@ header{
     margin: 0 auto;
     margin-top: 32px;
 }
-
 .product-list{
     font-size: 0;
     list-style: none;
@@ -218,8 +221,6 @@ header{
 .product-list-item{
     position: relative;
     float: left;
-}
-.product-list-item{
     width: 254px;
     margin-right: 30px;
 }
@@ -270,8 +271,6 @@ header{
     letter-spacing: -0.360px;
     color: #fff;
 }
-
-
 .price{
     display: block;
     width: 54px;
@@ -283,77 +282,99 @@ header{
     text-transform: uppercase; 
     float: right;
 }
+/* Hidden-PART!!! */
+.overlay:hover{
+    opacity: 1;
+}
 .overlay{
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-width: 10px;
-    border-color: rgb(255, 255, 255);
-    border-style: solid;
-    background-color: rgb(0, 0, 0);
-    opacity: 0.549;
+  width: 100%;
+  height: 88%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  border: 10px solid rgba(255, 255, 255, 0.5);
+  background-color: rgba(115, 115, 115, 0.5);
+  background-clip: padding-box;
        }
-       /* .Rectangle_50_copy {
-        border-width: 10px;
-        border-color: rgb(255, 255, 255);
-        border-style: solid;
-        background-color: rgb(0, 0, 0);
-        opacity: 0.549;
-        position: absolute;
-        left: 530px;
-        top: 946px;
-        width: 235px;
-        height: 261px;
-        z-index: 25;
-      } */
-      
-      
-.card-list-item:first-child .card-list-link{
-    background-image: url(../img/icons/heart.png);
+.card-list{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .card-list-item{
     float: left;
+    border: 1px solid rgb(255, 255, 255);
+    background-color: transparent;
+    height: 48px;
 }
-.card-list-link{
-    display: block;
-    width: 50px;
-    height: 50px;
-    background: no-repeat;
+.card-list-item:hover,
+.card-list-item:last-child:hover{
+    background-color: rgb(26, 188, 156);
+}
+.card-list-item:not(:last-child){
+    width: 48px;
+}
+.card-list-item:nth-child(-n+2){
+    margin-right: 8px;
+    margin-bottom: 8px;
+}
+.card-list-item:last-child{
+    width: 164px;
+    background-color: #323232;
+}
+.card-list-item:first-child{
+    background-image: url(../img/icons/heart.png);
+    background-repeat: no-repeat;
     background-position: center;
-    background-color: blue;
-    
 }
-.card-list-link:last-child{
-    width: 165px;
-    height: 50px;
+.card-list-item:nth-child(2){
+    background-image: url(../img/icons/arrows.png);
+    background-repeat: no-repeat;
+    background-position: center;
 }
-.card-list-link:nth-last-child(4n){
-    margin-right: 12px;
-    margin-bottom: 12px;
+.card-list-item:nth-child(3){
+    background-image: url(../img/icons/clock.png);
+    background-repeat: no-repeat;
+    background-position: center;
 }
+.card-list-item:last-child{
+    position: relative;
+    background-image: url(../img/icons/bascket.png);
+    background-repeat: no-repeat;
+    background-position: center left 8%;
+}
+.cart {
+    position: absolute;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+    top: 50%;
+    left: 35%;
+    transform: translateY(-50%);
+  }
 
+/* FOOTER */
 .footer {
-    padding: 38px 0 38px 0;
+    height: 88px;
+    line-height: 88px;
     background-color: #323232;
     text-align: center;
  }
- .text {
-    font-family: “OpenSans”, sans-serif;
+ .footer-text {
+    font-family: 'OpenSans', sans-serif;
     font-size: 16px;
     font-weight: 300;
     text-transform: capitalize;
     color: #ffffff;
     margin-bottom: 40px;
  }
- .author-name {
-    font-family: “OpenSans”, sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    text-transform: capitalize;
-    color: #ffffff;
- }
- .author-name:hover{
+ .author-name-link{
      color: #46bfa9;
+ }
+ .author-name-link:hover{
+     color: #7fd9c7;
  }
