--- a/html-css/module-6/css/style.css
+++ b/html-css/module-6/css/style.css
@@ -42,29 +42,29 @@ ol {
     display: block;
     margin: 0 auto;
 }
+
 /* HEADER */
 .navigation {
     display: flex;
     justify-content: space-between;
     align-items: center;
     min-height: 100px;
-    padding-bottom: 100px;
-    padding-top: 20px;
 }
+
 .logo {
     font-family: var(--font-montserrat);
     font-size: 30px;
     font-weight: 700;
     color: var(--aqua-color);
-    margin-bottom: 22px;
     transition: color 0.2s linear;
-    
 }
+
 .nav-list {
     display: flex;
     justify-content: space-between;
     min-width: 490px;
 }
+
 .nav-link{
     color: var(--aqua-color);
     font-family: var(--font-montserrat);
@@ -90,6 +90,7 @@ margin-top: 12px;
 }
 /* SECTION SERVICES */
 .services{
+    padding-top: 70px;
     padding-bottom: 90px;
 }
 .section-subtitle{
@@ -114,12 +115,14 @@ margin-top: 12px;
     height: 4px;
     width: 60px;
     background-color: var(--pink-color);
-    margin: 36px auto 60px auto;
+    margin: 36px auto 40px auto;
 }
+
 .services-list {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-top: 34px;
 }
 .services-list-item{
     width: 392px;
@@ -133,7 +136,6 @@ margin-top: 12px;
 .services-list-item-title{
     font-family: var(--font-montserrat);
     font-size: 14px;
-    line-height: 0;
     font-weight: 400;
     color: #333333;
     text-transform: uppercase;
@@ -151,7 +153,7 @@ margin-top: 12px;
     content: '';
     display: block;
     width: 32px;
-    height: 31px;
+    height: 32px;
     background-repeat: no-repeat;
     background-position: center;
     position: absolute;
@@ -174,14 +176,76 @@ margin-top: 12px;
 .services-list-item:last-child::before{
     background-image: url(../img/icons/IMAGE-6.png);
 }
+/* SECTION TEAM */
+.section-team{
+    padding-bottom: 80px;
+}
 .team-text{
     display: block;
     text-align: center;
-    width: 974px;
+    width: 900px;
     margin: 0 auto;
-    font-family: var(--grey-color);
+    font-family: var(--font-roboto);
+    color: var(--grey-color);
     font-size: 14px;
     font-weight: 400;
     padding-bottom: 90px;
+    line-height: 24px; 
 }
+
+
+  .footer {
+    border-top: 1px #e5e5e5 solid;
+    display: flex;
+    justify-content: space-between;
+    min-height: 62px;
+    align-items: center;
+  }
+  
+  .copyright {
+    color: #333333;
+    font-family: var(--font-montserrat);
+    font-size: 14px;
+  }
+  
+  .copyright-link {
+    color: var(--pink-color);
+    text-decoration: none;
+  }
+  
+  .email-form {
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+  }
+  
+  .email {
+    border: 1px #e5e5e5 solid;
+    margin: 0;
+    padding: 0;
+    width: 230px;
+    height: 40px;
+    color: #cccccc;
+    font-family: var(--font-roboto);
+    font-size: 14px;
+    font-weight: 300;
+    font-style: italic;
+    text-align: left;
+  }
+  
+  .submit {
+    margin: 0;
+    padding: 0;
+    border: none;
+    width: 150px;
+    height: 40px;
+    background-color: var(--aqua-color);
+    color: #fff;
+    font-family: var(--font-montserrat);
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 40px;
+    cursor: pointer;
+  }
 
