--- a/html-css/module-6/css/style.css
+++ b/html-css/module-6/css/style.css
@@ -1,9 +1,3 @@
-* 
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
 :root {
     --aqua-color: #95e1d3;
     --grey-color: #999999;
@@ -11,189 +5,300 @@
     --font-roboto: 'Roboto', sans-serif;
     --font-montserrat: 'Montserrat', sans-serif;
     --font-kaushan: 'Kaushan Script', cursive;
-}
-html {
+  }
+  
+  html {
     box-sizing: border-box;
-}
-
-a {
-    text-decoration: none;
-}
-
-img {
+  }
+  *,
+  *::before,
+  *::after {
+    box-sizing: inherit;
+  }
+  
+  img {
     display: block;
     max-width: 100%;
     height: auto;
-}
-
-ul,
-ol {
-    list-style: none;
-}
-
-.clearfix::after {
-    display: table;
-    content: "";
-    clear: both;
-}
-
-.container {
+  }
+  
+  .container {
     width: 1200px;
     display: block;
     margin: 0 auto;
-}
-
-/* HEADER */
-.navigation {
+  }
+  
+  /* HEADER */
+  
+  .navigation {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     min-height: 100px;
-}
-
-.logo {
+  }
+  
+  .logo {
+    color: var(--aqua-color);
     font-family: var(--font-montserrat);
     font-size: 30px;
     font-weight: 700;
-    color: var(--aqua-color);
-    transition: color 0.2s linear;
-}
-
-.nav-list {
+    text-decoration: none;
+    transition: color .2s linear;
+    margin-bottom: 16px;
+  }
+  .logo:hover,
+  .logo:focus{
+      color: var(--pink-color);
+  }
+  
+  .nav-list {
     display: flex;
     justify-content: space-between;
-    min-width: 490px;
-}
-
-.nav-link{
+    width: 470px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav-link {
     color: var(--aqua-color);
     font-family: var(--font-montserrat);
     font-size: 14px;
+    text-decoration: none;
     text-transform: uppercase;
     position: relative;
-    transition: color 0.2s linear;
-}
-.nav-link:hover,
-.logo:hover,
-.nav-link:focus{
+    transition: color .2s linear;
+  }
+  
+  .nav-link:hover,
+  .nav-link:focus {
     color: var(--pink-color);
-}
-.nav-link:hover::after,
-.nav-link:focus::after{
-display: block;
-content: '';
-position: absolute;
-background-color: var(--pink-color);
-width: 100%;
-height: 4px;
-margin-top: 12px;
-}
-/* SECTION SERVICES */
-.services{
-    padding-top: 70px;
-    padding-bottom: 90px;
-}
-.section-subtitle{
-    font-family: var(--font-kaushan);
-    font-size: 24px;
-    line-height: 50px;
-    font-weight: 400;
-    text-align: center;
-    color: #333333
-}
-.section-title{
-    font-family: var(--font-montserrat);
-    font-size: 30px;
-    font-weight: 700;
-    text-align: center;
-    color: #333333;
-    text-transform: uppercase;
-}
-.section-title::after{
+  }
+  
+  .nav-link:hover::after, 
+  .nav-link:focus::after {
     display: block;
     content: "";
-    height: 4px;
-    width: 60px;
+    position: absolute;
+    left: 5%;
+    width: 90%;
+    height: 3px;
+    margin-top: 10px;
     background-color: var(--pink-color);
-    margin: 36px auto 40px auto;
-}
-
-.services-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding-top: 34px;
-}
-.services-list-item{
-    width: 392px;
-    padding-left: 32px;
-    position: relative;
-    margin-bottom: 90px;
-}
-.services-list-item:nth-child(n+3){
-    margin-bottom: 0;
-}
-.services-list-item-title{
+  }
+  
+  /* SECTION TITLE */
+  
+  .main {
+    padding-top: 50px;
+  }
+  
+  .title-first-line {
+    font-family: var(--font-kaushan);
+    font-size: 24px;
+    color: #333333;
+    text-align: center;
+  }
+  
+  .title-second-line {
     font-family: var(--font-montserrat);
-    font-size: 14px;
-    font-weight: 400;
+    font-weight: 700;
+    font-size: 30px;
     color: #333333;
     text-transform: uppercase;
-    margin-bottom: 18px;
-    padding-left: 60px;
-}
-.services-list-item-text{
-    font-family: "Roboto", sans-serif;
-    font-size: 14px;
-    padding-left: 60px;
-    color: var(--grey-color);
-    line-height: 24px;
-}
-.services-list-item:before{
-    content: '';
-    display: block;
-    width: 32px;
-    height: 32px;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
-}
-.services-list-item:first-child::before{
-    background-image: url(../img/icons/ALARM-1.png);
-}
-.services-list-item:nth-child(2)::before{
-    background-image: url(../img/icons/LINE-GRAPH-2.png);
-}
-.services-list-item:nth-child(3)::before{
-    background-image: url(../img/icons/COMPUTER-OK-3.png);
-}
-.services-list-item:nth-child(4)::before{
-    background-image: url(../img/icons/BOOK-2-4.png);
-}
-.services-list-item:nth-child(5)::before{
-    background-image: url(../img/icons/HOME-5.png);
-}
-.services-list-item:last-child::before{
-    background-image: url(../img/icons/IMAGE-6.png);
-}
-/* SECTION TEAM */
-.section-team{
-    padding-bottom: 80px;
-}
-.team-text{
-    display: block;
     text-align: center;
-    width: 900px;
+  }
+  
+  .title-second-line::after {
+    display: block;
     margin: 0 auto;
+    content: "";
+    width: 60px;
+    height: 3px;
+    margin-top: 40px;
+    background-color: var(--pink-color);
+  }
+  
+  /* SECTION SERVICE */
+  
+  .service-title {
+    font-family: var(--font-montserrat);
+    font-size: 14px;
+    color: #333333;
+    text-transform: uppercase;
+    margin-left: 25px;
+    margin-top: 40px;
+  }
+  
+  .service-subtitle {
     font-family: var(--font-roboto);
     color: var(--grey-color);
     font-size: 14px;
-    font-weight: 400;
+    line-height: 24px;
+    margin-left: 25px;
+  }
+  
+  .service-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .service-item {
+    flex: 0 0 370px;
+    padding: 0 38px;
+    text-align: left;
+    margin-bottom: 80px;
+  }
+  
+  .service-list .service-item:first-child {
+    background-image: url(/img/icons/ALARM-1.png);
+    background-repeat: no-repeat;
+    background-position: left center;
+  }
+  
+  .service-list .service-item:nth-child(2) {
+    background-image: url(/img/icons/LINE-GRAPH-2.png);
+    background-repeat: no-repeat;
+    background-position: left center;
+  }
+  
+  .service-list .service-item:nth-child(3) {
+    background-image: url(/img/icons/COMPUTER-OK-3.png);
+    background-repeat: no-repeat;
+    background-position: left center;
+  }
+  
+  .service-list .service-item:nth-child(4) {
+    background-image: url(/img/icons/BOOK-2-4.png);
+    background-repeat: no-repeat;
+    background-position: left center;
+  }
+  
+  .service-list .service-item:nth-child(5) {
+    background-image: url(/img/icons/HOME-5.png);
+    background-repeat: no-repeat;
+    background-position: left center;
+  }
+  
+  .service-list .service-item:last-child {
+    background-image: url(/img/icons/IMAGE-6.png);
+    background-repeat: no-repeat;
+    background-position: left center;
+  }
+  
+  /* SECTION TEAM */
+  
+  .section-team {
+    padding-bottom: 80px;
+  }
+  
+  .team-description {
+    font-family: var(--font-roboto);
+    font-size: 14px;
+    line-height: 24px;
+    color: var(--grey-color);
+    display: block;
+    margin: 0 auto;
+    width: 900px;
+    text-align: center;
     padding-bottom: 90px;
-    line-height: 24px; 
-}
-
-
+  }
+  
+  .team-card {
+    height: 470px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    background: linear-gradient(rgba(243, 129, 129, .9), rgba(252, 227, 138, .9));
+    width: 100%;
+    transition: transform .2s linear, box-shadow .2s linear .0s;
+  }
+  
+  .team-list {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .team-item {
+    position: relative;
+  }
+  
+  .team-name {
+    font-family: var(--font-montserrat);
+    font-size: 14px;
+    color: #333333;
+    text-transform: uppercase;
+    display: block;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .team-position {
+    display: block;
+    text-align: center;
+    margin-top: 10px;
+    font-family: var(--font-roboto);
+    font-weight: 300;
+    font-style: italic;
+    color: var(--grey-color);
+  }
+  
+  /* SOCIAL ICONS */
+  
+  .social-list {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .social-item {
+    order: 0;
+    flex: 0 1 auto;
+    align-self: auto;
+  }
+  
+  .social-link {
+    display: block;
+    height: 55px;
+    width: 55px;
+    background-color: #fce38a;
+    position: relative;
+  }
+  
+  .social-link:hover {
+    background-color: var(--aqua-color);
+  }
+  
+  /* SOC LIST */
+  .team-item:hover .team-card  {
+    opacity: 1;
+    transform: translate(-10px, -10px);
+    box-shadow: 10px 10px 0 0 var(--aqua-color);
+  }
+  
+  .social-img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  /* FOOTER */
   .footer {
     border-top: 1px #e5e5e5 solid;
     display: flex;
@@ -248,4 +353,3 @@ margin-top: 12px;
     line-height: 40px;
     cursor: pointer;
   }
-
